// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`form/IconButton Default smoke-test 1`] = `
<div class="gi-p-4 false">
  <button class="gi-btn gi-btn-primary gi-icon-btn-regular undefined ">
    <span role="presentation"
          class=" material-icons  gi-block 16px"
          style="font-size: 16px;"
    >
      thumb_up
    </span>
  </button>
</div>
`;

exports[`form/IconButton Disabled smoke-test 1`] = `
<div class="gi-p-4 false">
  <button class="gi-btn undefined gi-icon-btn-regular gi-btn-primary-disabled ">
    <span role="presentation"
          class=" material-icons  gi-block 16px"
          style="font-size: 16px;"
    >
      thumb_up
    </span>
  </button>
</div>
`;

exports[`form/IconButton FlatButton smoke-test 1`] = `
<div class="gi-p-4 false">
  <button class="gi-btn gi-btn-flat gi-icon-btn-regular undefined ">
    <span role="presentation"
          class=" material-icons  gi-block 16px"
          style="font-size: 16px;"
    >
      thumb_up
    </span>
  </button>
</div>
`;

exports[`form/IconButton Large smoke-test 1`] = `
<div class="gi-p-4 false">
  <button class="gi-btn gi-btn-primary gi-icon-btn-large undefined ">
    <span role="presentation"
          class=" material-icons  gi-block 24px"
          style="font-size: 24px;"
    >
      thumb_up
    </span>
  </button>
</div>
`;

exports[`form/IconButton SecondaryButton smoke-test 1`] = `
<div class="gi-p-4 false">
  <button class="gi-btn gi-btn-secondary gi-icon-btn-regular undefined ">
    <span role="presentation"
          class=" material-icons  gi-block 16px"
          style="font-size: 16px;"
    >
      thumb_up
    </span>
  </button>
</div>
`;

exports[`form/IconButton Small smoke-test 1`] = `
<div class="gi-p-4 false">
  <button class="gi-btn gi-btn-primary gi-icon-btn-small undefined ">
    <span role="presentation"
          class=" material-icons  gi-block 16px"
          style="font-size: 16px;"
    >
      thumb_up
    </span>
  </button>
</div>
`;
